[package]
name = "filecoin-hashers"
description = "Hashers used in filecoin and their abstractions."
version = "3.0.3"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
anyhow = "1.0.34"
bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "halo" }
ff = "0.10.0"
generic-array = "0.14.4"
hex = "0.4.2"
merkletree = "0.21.0"
rand = "0.8.0"
serde = "1.0.117"

# poseidon feature
neptune = { git = "https://github.com/filecoin-project/neptune", branch = "halo", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# blake2s feature
blake2s_simd = { version = "0.5.11", optional = true }

# sha256 feature
sha2 = { version = "0.9.2", optional = true }

[features]
default = ["gpu", "blake2s", "poseidon", "sha256"]
gpu = ["bellperson/gpu", "neptune/opencl"]

# available hashers
blake2s = ["blake2s_simd"]
poseidon = ["neptune", "lazy_static"]
sha256 = ["sha2"]

[dev-dependencies]
rand_xorshift = "0.2.0"
serde_json = "1.0.59"
